Fast incremental build

--- a/cli/pom.xml
+++ b/cli/pom.xml
@@ -18,6 +18,8 @@
     <mina-sshd.version>2.17.1</mina-sshd.version>
     <!-- Filled in by jacoco-maven-plugin -->
     <jacocoSurefireArgs />
+    <!-- Intentionally run only one test to reduce cycle time -->
+    <test>QuotedStringTokenizerTest</test>
   </properties>
 
   <dependencyManagement>
